[package]
name = "spaza-escrow"
version = "0.1.0"
edition = "2024"
authors = ["GAC"]
description = "A decentralized escrow system for African spaza shops"
license = "MIT"
repository = "https://github.com/lethaboselahle/spaza-safety-escrow"
readme = "README.md"
keywords = ["escrow", "fintech", "africa", "rust", "hackathon"]
categories = ["financial", "web-programming", "algorithms"]

[dependencies]
rust_decimal = "1.34"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_matches = "1.5"